ShowcaseControllerTest integrated